kubernetes/backend-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb" # Use "nlb" if you prefer Network Load Balancer
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
